# omnistat

./: .gitignore  Cargo.toml  Makefile  README.md
config/: .env.dist  server-config.dist.toml
core/: Cargo.toml
core/src/: client.rs  error.rs  lib.rs  types.rs
core/src/apis/: open_meteo.rs
core/src/apis/open_meteo/: daily_forecast.rs  hourly_forecast.rs  utils.rs
core/src/client/: request.rs
core/src/types/: angle.rs  area_energy_density.rs  area_power_density.rs  digital_information.rs  latitude.rs  length.rs  longitude.rs  percentage.rs  pressure.rs  speed.rs  temperature.rs  uv_index.rs  wmo_code.rs
docker/: Dockerfile  docker-compose.db.yml  docker-compose.yml
integrations/: Cargo.toml
integrations/src/: apis.rs  client.rs  error.rs  lib.rs
integrations/src/apis/: open_aq.rs  open_meteo.rs
integrations/src/apis/open_meteo/: daily_forecast.rs  hourly_forecast.rs  utils.rs
integrations/src/client/: request.rs
net/: Cargo.toml
net/src/: error.rs  lib.rs
server/: Cargo.toml
server/migration/src/: lib.rs  m20251102_104720_initial_weather.rs
server/src/: apis.rs  config.rs  database.rs  jobs.rs  main.rs  services.rs  state.rs
server/src/config/: user.rs
server/src/database/entity/: hourly_weather.rs  mod.rs  prelude.rs
server/src/database/entity_ext/: hourly_weather.rs  mod.rs
server/src/jobs/: hourly_weather_report.rs
server/src/services/: weather.rs
server/src/services/weather/: hour.rs
