[package]
name = "omnistat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
migration = { path = "migration" }
omnistat-core = { workspace = true }
anyhow = "1.0.100"
sea-orm = { version = "2.0.0-rc.16", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = "0.15.1"
toml = "0.9.8"
tracing = { workspace = true }
tracing-subscriber = "0.3.20"